Fixed the view projects button not functioning properly on mobile. Changed the event listener from specific item to a document listener targeting the item.

--- a/Assets/CSS/info-page.css
+++ b/Assets/CSS/info-page.css
@@ -100,6 +100,9 @@
     margin-left: auto;
   }
 
+  .brand {
+    cursor: pointer;
+  }
   /* End of Info Page Adjustments */
 
 }
